--- a/index.html
+++ b/index.html
@@ -34,99 +34,109 @@
             });
         }
     </script>
-
     <div class="container-site">
-        <div class="row no-gutters">
-            <div class="col- navigazione">
-                <div class="logo">
-                    <h1>Vaccini Covid-19&nbsp;</h1>
-                    <h2>REAL TIME</h2>
+
+        <div class="container-site-small">
+            <div class="row no-gutters">
+                <div class="col- navigazione">
+                    <div class="logo">
+                        <h1>Vaccini Covid-19&nbsp;</h1>
+                        <h2>REAL TIME</h2>
+                    </div>
+                    <h3><br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
+                        <br><a class="fonti" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
+                        <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
+                        <br>
+
+                        <a class="bottone-on" href="./index.html">
+                            <div class="testo-bottoni">
+                                <h3>Quanti vaccini vengono fatti al giorno?</h3>
+                            </div>
+                        </a>
+                        <div class="panel">
+                            <h3>In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di greggie (70% della popolazione italiana:
+                                42,25 Milioni). Il tempo stimato è calcolato sulla base della media mobile delle somministrazioni effettuate negli ultimi 7 giorni.</h3>
+                        </div>
+
+                        <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
+                            <div class="testo-bottoni">
+                                <h3>Quali categorie di persone sono già state vaccinate?</h3>
+                            </div>
+                        </a>
+
+                        <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
+                            <div class="testo-bottoni">
+                                <h3>Quante persone sono state vaccinate in ogni regione?</h3>
+                            </div>
+                        </a>
+
+                        <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
+                            <div class="testo-bottoni">
+                                <h3>Quali sono i fornitori di vaccini?</h3>
+                            </div>
+                        </a>
+
+                        <div class="legenda">
+                            <h2>• LEGENDA:</h2> Il colore indica la somministazione della
+                            <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
+                            <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
+                        </div>
                 </div>
-                <h3><br> Questa dashboard mostra l’andamento della campagna vaccinale in Italia, monitorando le vaccinazioni giornaliere, le categorie interessate, l’andamento a livello regionale e la tipologia di vaccini somministrati.<br>
-                    <br><a class="fonti" href="https://github.com/italia/covid19-opendata-vaccini" target="blank">Consulta le fonti ufficiali →</a><br><br><br>
-                    <h2>• SELEZIONA L'ARGOMENTO CHE VUOI APPROFONDIRE:</h2>
-                    <br>
 
-                    <a class="bottone-on" href="./index.html">
-                        <div class="testo-bottoni">
-                            <h3>Quanti vaccini vengono fatti al giorno?</h3>
-                        </div>
-                    </a>
-                    <div class="panel">
-                        <h3>In questa scheda è possibile approfondire l'andamento delle somministrazioni giornaliere della prima e della seconda dose di vaccino e il tempo necessario al raggiungimento dell'immunità di greggie (70% della popolazione italiana:
-                            42,25 Milioni). Il tempo stimato è calcolato sulla base della media mobile delle somministrazioni effettuate negli ultimi 7 giorni.</h3>
-                    </div>
 
-                    <a class="bottone-off bottone-2" href="./categorie-vaccinate.html">
-                        <div class="testo-bottoni">
-                            <h3>Quali categorie di persone sono già state vaccinate?</h3>
-                        </div>
-                    </a>
 
-                    <a class="bottone-off bottone-3" href="./vaccinazioni-per-regione.html">
-                        <div class="testo-bottoni">
-                            <h3>Quante persone sono state vaccinate in ogni regione?</h3>
-                        </div>
-                    </a>
+                <div class="col- dashboard">
 
-                    <a class="bottone-off bottone-4" href="./fornitori-vaccini.html">
-                        <div class="testo-bottoni">
-                            <h3>Quali sono i fornitori di vaccini?</h3>
-                        </div>
-                    </a>
+                    <div class='tableauPlaceholder' id='viz1615218454077' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'
+                            style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='no' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
+                    <script type='text/javascript'>
+                        var divElement = document.getElementById('viz1615218454077');
+                        var vizElement = divElement.getElementsByTagName('object')[0];
+                        if (divElement.offsetWidth > 1000) {
+                            vizElement.style.width = '100%';
+                            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                        } else if (divElement.offsetWidth > 500) {
+                            vizElement.style.width = '100%';
+                            vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
+                        } else {
+                            vizElement.style.width = '100%';
+                            vizElement.style.minHeight = '1590px';
+                            vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
+                        }
+                        var scriptElement = document.createElement('script');
+                        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                    </script>
 
-                    <div class="legenda">
-                        <h2>• LEGENDA:</h2> Il colore indica la somministazione della
-                        <span style="color:#FFFDF5; background-color:#F8A984; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">PRIMA</span> e della
-                        <span style="color:#FFFDF5; background-color:#8B9BBF; font-size: 10px; letter-spacing: 1.5px; font-weight: bolder; padding:2px 4px;">SECONDA</span> dose di vaccino.
-                    </div>
 
-                    <div class="credits-desk">
-                        <div class="logo-hdm logo-hdm-desk">
-                            <img src="./assets/Logo_HDM.svg" alt="Logo">
-                        </div>
-
-                        <h3><span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
-                            <span style="font-weight: bold;">DataViz Designers:</span> Annalaura Cannavò, Alessia Musio</h3>
-                    </div>
+                </div>
             </div>
+        </div>
 
+        <div class="footer-hdm credits">
+            <div class="prova">
+                <div class="logo-hdm margin-right">
+                    <img src="./assets/Logo_HDM.svg" alt="Logo">
+                </div>
 
+                <div class="sito-hdm margin-right margin-top">
+                    <a class="sito-hdm" href="https://www.h-dm.it/it/" target="blank">
+                        <h3>Visita il nostro sito →</h3>
+                    </a>
+                </div>
 
-            <div class="col- dashboard">
+                <div class="nomi margin-right margin-top">
+                    <h3><span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br></h3>
+                </div>
 
-                <div class='tableauPlaceholder' id='viz1615218454077' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Vaccini_16151974072070&#47;DosiGiornaliere' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Va&#47;Vaccini_16151974072070&#47;DosiGiornaliere&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='no' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='it' /></object></div>
-                <script type='text/javascript'>
-                    var divElement = document.getElementById('viz1615218454077');
-                    var vizElement = divElement.getElementsByTagName('object')[0];
-                    if (divElement.offsetWidth > 1000) {
-                        vizElement.style.width = '100%';
-                        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                    } else if (divElement.offsetWidth > 500) {
-                        vizElement.style.width = '100%';
-                        vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
-                    } else {
-                        vizElement.style.width = '100%';
-                        vizElement.style.minHeight = '1590px';
-                        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
-                    }
-                    var scriptElement = document.createElement('script');
-                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-                </script>
-
-                <div class="credits-mobile">
-                    <div class="logo-hdm logo-hdm-mobile">
-                        <img src="./assets/Logo_HDM.svg" alt="Logo">
-                    </div>
-
-                    <h3><span style="font-weight: bold;">Data Scientists:</span> Giuseppe Iovino, Nicolò Marana<br>
-                        <span style="font-weight: bold;">DataViz Designers:</span> Annalaura Cannavò, Alessia Musio</h3>
+                <div class="nomi margin-right margin-top">
+                    <h3><span style="font-weight: bold;">DataViz Designers:</span> Annalaura Cannavò, Alessia Musio</h3>
                 </div>
 
             </div>
         </div>
     </div>
+
 
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="./js/main.js"></script>
